<resources>
    <string name="app_name">ANTI RAGGING</string>
    <string name="location">LOCATION</string>
    <string name="des2">The motive of our organisation is to provide help and support to the society and the victims of such ragging activities practiced in various institutions, colleges, schools, etc. The main aim of our organisation is to raise voice against the practice of ragging all over India and create a society free of ragging.</string>
    <string name="description">Our non-profit organisation, SAVE (Society Against Violence in Education), basically works against ragging all over India. SAVE creates a common platform for voices against ragging; SAVE is a fully cause-driven organization. Once the goal is reached, we can switch over to some other social causes, as will be legally feasible. We want that to happen on or before 2020.</string>
    <string name="telcom">Phone (SAVE Central): "\n" Dr. Kushal Banerjee : (+91) 983 604 2919 "\n" Er. Gaurav Singhal : (+91) 991 137 0552 "\n" Adv. Meera Kaura Patel : (+91) 991 000 2111"\n"</string>
    <string name="des3">Ragging has ruined countless innocent lives and careers. In order to eradicate it, Hon’ble Supreme Court in Civil Appeal No. 887 of 2009, passed the judgement wherein guidelines were issued for setting up of a Central Crisis Hotline and Anti-Ragging database. In accordance with the orders, UGC (University Grants Commission), Govt. of India has developed this web portal.</string>
    <string name="IPC">
There are provisions in the IPC which can be used by a student to register an FIR in the nearest Police Station. These provisions are:\n\n

294 – Obscene acts and songs\n
323 – punishment for voluntarily causing hurt\n
324 – voluntarily causing hurt by dangerous weapon or means\n
325 – punishment for voluntarily causing grievous hurt\n
326 – voluntarily causing grievous hurt by dangerous weapon\n
339 – Wrongful Restraint\n
340 – Wrongful Confinement\n
341 – Punishment for Wrongful Restraint\n
342 – Punishment for Wrongful Confinement\n
506 – Punishment for culpable homicide not amounting to murder\n\n</string>

   <string name="UGC">Regulation 6 talks about the measures for prevention of ragging at the institution level. It lays down the steps an institution has to follow during the admission and registration process. A student during the admission process has to file an affidavit along with his parents/guardian’s signature, stating that he will not be ragging other students directly or indirectly.  Also, the institution has to publish the names and contact numbers of Anti-ragging committee of the university.\n \n

       Every fresh student admitted to the institution shall be given a printed leaflet detailing to whom he/she has to turn to for help and guidance for various purposes including addresses and telephone numbers, so as to enable the student to contact the concerned person at an y time.\n

      \n Regulation 6.3 says that every institution shall constitute a  committee to be known as the Anti-Ragging Committee to be nominated and headed by the Head of the institution, and consisting of representatives of civil and police administration, local media, Non-Government Organizations involved in youth activities, representatives of faculty members, representatives of parents, representatives of students  belonging  to the fresher’s category as well as senior students, non-teaching staff; and shall have a diverse mix of membership in terms of levels as well as gender. It shall be the duty of the Anti-Ragging Committee to ensure compliance with the provisions of the Regulations as well as the provisions of any law for the time being in force concerning ragging ; and also to monitor and oversee the performance of the Anti-Ragging Squad. It shall be the duty of the Anti-Ragging Squad to make surprise raids on hostels, and other places vulnerable to incidents of, and having the potential of, ragging.\n


       \nRegulation 7 lays down that on receipt of any information concerning any reported incident of ragging, the Head of institution shall immediately determine if a case under the penal laws is made out and if so, either on his own or through a member of the Anti-Ragging Committee, proceed to file a First Information Report ( FIR), within twenty four hours of receipt of such information.\n

       \nRegulation 9 lays down that The Anti-Ragging Committee of the institution shall take an appropriate decision, in regard to punishment or otherwise, depending on the facts of each incident of ragging and nature and gravity of the incident of ragging established in the recommendations of the Anti-Ragging Squad.
   </string>
   <string name="other">
\nApart from the IPC and the UGC Regulations, there are other government bodies who have their own laws on ragging in their respective acts. For example the All India Council For Technical Education [AICTE] and the Medical Council of India have made their own regulations under their respective acts.\n\n

The AICTE has created “All India Council for Technical Education (Prevention and Prohibition of Ragging in Technical Institutions, Universities including Deemed to be Universities imparting technical education) Regulations 2009” under Section 23 and Section 10 of the AICTE Act, 1987.\n\n

Similarly, the Medical Council of India has made “Medical Council of India (Prevention and Prohibition of Ragging in Medical Colleges/Institutions) Regulations, 2009” under Section 33 of the Indian Medical Council Act, 1956.\n
   </string>
</resources>
