<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.antiraggingapp.ngo">
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1. SAVE (Society Against Voilence in education)"
        android:layout_below="@+id/banner"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="30dp"/>

    <ImageView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:src="@drawable/banner"/>

    <TextView
        android:id="@+id/des1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:text="@string/description"
        android:textSize="15dp"
        android:textColor="#000"
        />
    <TextView
        android:id="@+id/telcom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/des1"
        android:layout_marginTop="5dp"
        android:text="@string/telcom"
        android:textSize="15dp"
        android:textColor="#000"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="website link"
        android:onClick="website"
        android:id="@+id/website1"
        android:layout_below="@+id/telcom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:id="@+id/border"
        android:layout_marginTop="10sp"
        android:background="#000"
        android:layout_below="@+id/website1"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_below="@id/border"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:text="2.GOVERNMENT PORTAL ON RAGGING"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/second"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/second"
        android:text="@string/des3"
        android:textColor="#000"
        android:id="@+id/de3"
        android:layout_marginTop="6dp"
        android:textSize="20dp"/>
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Website Link"
        android:onClick="website2"
        android:layout_below="@id/de3"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>
</ScrollView>